Fix Renderer4.MainThreadWheelScrollReason not being reported.

When wheel gestures were enabled the UMA histograms for
Renderer4.MainThreadGestureScrollReason increased. Separate
out wheel gestures into Renderer4.MainThreadWheelScrollReason.

BUG=611186

Review-Url: https://codereview.chromium.org/1965313003
Cr-Commit-Position: refs/heads/master@{#393240}

Former-commit-id: 3b55960dd01d394ef0f9fdcc5c12fbb31f6cdc94